--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ Whoops, looks like that page doesn't exist.
 </p>
 
 <p>
-Seems some link is broken. Please visit the <a href="http://thedeploymentguy.com/#blog" title="Blog">home page</a> to find the content you are looking for.
+Seems some link is broken. Please visit the <a href="http://thedeploymentguy.ga/#blog" title="Blog">home page</a> to find the content you are looking for.
 </p>
 
 <div class="tags"> 
